# Nova-Template-CMake-c-

./: .gitignore  CMakeLists.txt  README.md  setup.py  setup.sh  vcpkg.json
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  core.cpp  logger.cpp
src/core/include/: core.h  logger.h
